# agent-forge

./: README.md  main.py  pyproject.toml  temp.py
.ai-agent/: config.toml
agent/: agent.py  events.py  persistance.py  session.py
client/: llm_client.py  response.py
config/: config.py
context/: loop_detector.py  manager.py
prompts/: system.py
safety/: approval.py
scripts/: test_tool.py
tools/: base.py  registry.py
tools/builtin/: __init__.py  edit_file.py  memory.py  read_file.py  web_fetch.py  write_file.py
tools/mcp/: client.py  mcp_manager.py  mcp_tool.py
ui/: tui.py
utils/: paths.py  text.py
