[project]
name = "ai-agent-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.1",
    "dotenv>=0.9.9",
    "openai>=2.15.0",
    "platformdirs>=4.5.1",
    "pydantic>=2.12.5",
    "rich>=14.2.0",
    "tiktoken>=0.12.0",
    "tomli>=2.4.0",
]
